fixed spacing and positioning of images in section5

--- a/css/styles.css
+++ b/css/styles.css
@@ -43,8 +43,8 @@
     line-height: 40px;
     color:white;
     font-size: 18px;
-    padding-top: 85px;
-    padding-bottom: 70px;
+    padding-top: 100px;
+    padding-bottom: 90px;
 }
 .section3title{
     font-weight: bold;
@@ -58,7 +58,7 @@ figcaption{
 }
 #row4{
     text-align: center;
-    margin-bottom: 30px;
+    margin-bottom: 50px;
 }
 .title4{
     text-align: center;
@@ -83,10 +83,18 @@ figcaption{
     cursor: pointer;
 }
 .row5 img{
-    height:200px;
-    width: 300px;
+    height:90%;
+    width: 100%;
     text-align: center;
 }
 .section5{
-    margin-bottom: 40px;
+    margin-bottom: 50px;
+}
+.section5title{
+    text-align: center;
+    text-transform: uppercase;
+    margin-bottom: 20px;
+}
+#container5{
+    text-align: center;
 }
